force-app/main/default/objects/Contact/fields/Accrued_Annual_Leave__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Annual_Leave__c</fullName>
    <label>Accrued Annual Leave</label>
    <summarizedField>Earnings_and_Leave_Statements__c.Annual_Leave_Accrued__c</summarizedField>
    <summaryFilterItems>
        <field>Earnings_and_Leave_Statements__c.Pay_Period__c</field>
        <operation>equals</operation>
        <value>10</value>
    </summaryFilterItems>
    <summaryForeignKey>Earnings_and_Leave_Statements__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>