force-app/main/default/objects/Contact/fields/Accrued_Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Sick_Leave__c</fullName>
    <label>Accrued Sick Leave</label>
    <summarizedField>Earnings_and_Leave_Statements__c.Sick_Leave_Accrued__c</summarizedField>
    <summaryForeignKey>Earnings_and_Leave_Statements__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>