force-app/main/default/objects/Contact/fields/Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary__c</fullName>
    <description>replace with new Total Salary field</description>
    <label>Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>