force-app/main/default/objects/Contact/fields/Community_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Domain_Name__c</fullName>
    <formula>LEFT(Domain_Name__c, FIND(&apos;.my.salesforce.com/&apos;,Domain_Name__c)+15) &amp; &apos;-community.force.com/&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Domain Name</label>
    <type>Text</type>
</CustomField>