force-app/main/default/objects/Contact/fields/Default_Workforce_Manager__c.field-meta.xml
<CustomField>
    <fullName>Default_Workforce_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please select this Employee&apos;s Default Workforce Liaison</description>
    <inlineHelpText>Please select this Employee&apos;s Default Workforce Liaison</inlineHelpText>
    <label>Default Workforce Liaison</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Managed Employees</relationshipLabel>
    <relationshipName>Managed_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>