force-app/main/default/objects/Contact/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_140, FIND(&apos;.com/&apos;,$Api.Partner_Server_URL_140)+3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain Name</label>
    <type>Text</type>
</CustomField>