force-app/main/default/objects/Contact/fields/Duty_Station__c.field-meta.xml
<CustomField>
    <fullName>Duty_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The city/town, county, and state in which the employee works. For most employees, their duty station will be the location of the employee&apos;s work site; https://dw.opm.gov/datastandards/dataStandard/1433?index=D</description>
    <inlineHelpText>The city/town, county, and state in which the employee works. For most employees, their duty station will be the location of the employee&apos;s work site; https://dw.opm.gov/datastandards/dataStandard/1433?index=D</inlineHelpText>
    <label>Duty Station</label>
    <referenceTo>Duty_Station__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>