force-app/main/default/objects/Contact/fields/Education_Level_New__c.field-meta.xml
<CustomField>
    <fullName>Education_Level_New__c</fullName>
    <description>The highest level of education attained by the employee from an accredited institution; https://dw.opm.gov/datastandards/dataStandard/1435?index=E</description>
    <inlineHelpText>The highest level of education attained by the employee from an accredited institution; https://dw.opm.gov/datastandards/dataStandard/1435?index=E</inlineHelpText>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Education_Level_New</valueSetName>
    </valueSet>
</CustomField>