force-app/main/default/objects/Contact/fields/Employee_Life_Insurance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Employee_Life_Insurance_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An employee&apos;s life insurance coverage or noncoverage; https://dw.opm.gov/datastandards/dataStandard/1444?index=F</description>
    <inlineHelpText>An employee&apos;s life insurance coverage or noncoverage; https://dw.opm.gov/datastandards/dataStandard/1444?index=F</inlineHelpText>
    <label>Employee Life Insurance Plan</label>
    <referenceTo>Employee_Life_Insurance_Plan__c</referenceTo>
    <relationshipLabel>Employee Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>