force-app/main/default/objects/Contact/fields/Entry_on_Duty__c.field-meta.xml
<CustomField>
    <fullName>Entry_on_Duty__c</fullName>
    <label>Entry on Duty</label>
    <type>Date</type>
</CustomField>