force-app/main/default/objects/Contact/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>Eventually replace with new Grade_or_Level__c field</description>
    <inlineHelpText>Eventually replace with new Grade_or_Level__c field</inlineHelpText>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Grades</valueSetName>
    </valueSet>
</CustomField>