force-app/main/default/objects/Contact/fields/Gross_Pay_per_Period__c.field-meta.xml
<CustomField>
    <fullName>Gross_Pay_per_Period__c</fullName>
    <formula>CASE( Pay_Cycle__c , &quot;Weekly&quot;,  Total_Salary__c/52, &quot;Monthly&quot;, Total_Salary__c/12, Total_Salary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Pay per Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>