force-app/main/default/objects/Contact/fields/Hire_State__c.field-meta.xml
<CustomField>
    <fullName>Hire_State__c</fullName>
    <formula>IF( Applicant_Hire_Flag__c, IMAGE( &quot;/img/samples/flag_green.gif&quot;,&quot;No Issues&quot;), IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;Applicant Issue&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hire State</label>
    <type>Text</type>
</CustomField>