force-app/main/default/objects/Contact/fields/I_9_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>I_9_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I 9 Reviewed</label>
    <type>Checkbox</type>
</CustomField>