force-app/main/default/objects/Contact/fields/I_9_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>I_9_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I-9 Uploaded</label>
    <type>Checkbox</type>
</CustomField>