force-app/main/default/objects/Contact/fields/Identity_Check_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Identity_Check_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identity Check Uploaded</label>
    <type>Checkbox</type>
</CustomField>