force-app/main/default/objects/Contact/fields/Locality_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Locality_Adjustment__c</fullName>
    <description>The value of an employee&apos;s locality payment, special rate supplement, or equivalent payment; https://dw.opm.gov/datastandards/dataStandard/1475?index=L</description>
    <inlineHelpText>The value of an employee&apos;s locality payment, special rate supplement, or equivalent payment; https://dw.opm.gov/datastandards/dataStandard/1475?index=L</inlineHelpText>
    <label>Locality Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>