force-app/main/default/objects/Contact/fields/My_Employee_Flag__c.field-meta.xml
<CustomField>
    <fullName>My_Employee_Flag__c</fullName>
    <formula>IF( ReportsTo.User_Record__r.Id = $User.Id  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Employee Flag</label>
    <type>Checkbox</type>
</CustomField>