force-app/main/default/objects/Contact/fields/Pay_Basis__c.field-meta.xml
<CustomField>
    <fullName>Pay_Basis__c</fullName>
    <description>The principal condition in terms of time, production, or other criteria that, along with salary rate, determines the compensation paid to an employee; https://dw.opm.gov/datastandards/dataStandard/1496?index=P</description>
    <formula>TEXT(Position_Current__r.Pay_Basis__c)</formula>
    <inlineHelpText>The principal condition in terms of time, production, or other criteria that, along with salary rate, determines the compensation paid to an employee; https://dw.opm.gov/datastandards/dataStandard/1496?index=P</inlineHelpText>
    <label>Pay Basis</label>
    <type>Text</type>
</CustomField>