force-app/main/default/objects/Contact/fields/Pay_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Pay_Cycle__c</fullName>
    <description>How often the employee is paid; to be replaced by new Pay Basis field</description>
    <inlineHelpText>How often the employee is paid; to be replaced by new Pay Basis field</inlineHelpText>
    <label>Pay Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>