force-app/main/default/objects/Contact/fields/Pay_Rate_Determinant__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate_Determinant__c</fullName>
    <description>A designation of any special factors that help determine an employee&apos;s rate of basic pay or adjusted basic pay; https://dw.opm.gov/datastandards/dataStandard/1498?index=P</description>
    <inlineHelpText>A designation of any special factors that help determine an employee&apos;s rate of basic pay or adjusted basic pay; https://dw.opm.gov/datastandards/dataStandard/1498?index=P</inlineHelpText>
    <label>Pay Rate Determinant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pay_Rate_Determinant</valueSetName>
    </valueSet>
</CustomField>