force-app/main/default/objects/Contact/fields/Position_Current__c.field-meta.xml
<CustomField>
    <fullName>Position_Current__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position (Current)</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>