force-app/main/default/objects/Contact/fields/Position_Date__c.field-meta.xml
<CustomField>
    <fullName>Position_Date__c</fullName>
    <description>Date for tracking when the employee started this position</description>
    <label>Position Date</label>
    <type>Date</type>
</CustomField>