force-app/main/default/objects/Contact/fields/Retirement_Date__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Date__c</fullName>
    <label>Retirement Date</label>
    <type>Date</type>
</CustomField>