force-app/main/default/objects/Contact/fields/Run_Five_Days_Before_Process__c.field-meta.xml
<CustomField>
    <fullName>Run_Five_Days_Before_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of the Employee Onboarding Demo Scenario. Signifies that the Pre-Onboarding automation has been run and that the Activate Employee automation can be enabled.</description>
    <inlineHelpText>Part of the Employee Onboarding Demo Scenario. Signifies that the Pre-Onboarding automation has been run and that the Activate Employee automation can be enabled.</inlineHelpText>
    <label>Run 5 Days Before Process</label>
    <type>Checkbox</type>
</CustomField>