force-app/main/default/objects/Contact/fields/Security_Level__c.field-meta.xml
<CustomField>
    <fullName>Security_Level__c</fullName>
    <label>Security Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Security_Level</valueSetName>
    </valueSet>
</CustomField>