force-app/main/default/objects/Contact/fields/Suitability_Complete__c.field-meta.xml
<CustomField>
    <fullName>Suitability_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Employee completed required suitability prior to Onboarding?</description>
    <inlineHelpText>Has the Employee completed required suitability prior to Onboarding?</inlineHelpText>
    <label>Suitability Complete</label>
    <type>Checkbox</type>
</CustomField>