force-app/main/default/objects/Contact/fields/Supervisor_Flag__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Employee is a Supervisor</description>
    <label>Supervisor Flag</label>
    <type>Checkbox</type>
</CustomField>