force-app/main/default/objects/Contact/fields/Total_Annual_Used_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Used_Leave__c</fullName>
    <label>Total Annual Leave Used</label>
    <summarizedField>Earnings_and_Leave_Statements__c.Annual_Leave_Used__c</summarizedField>
    <summaryForeignKey>Earnings_and_Leave_Statements__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>