force-app/main/default/objects/Contact/fields/Total_Sick_Leave_Used__c.field-meta.xml
<CustomField>
    <fullName>Total_Sick_Leave_Used__c</fullName>
    <label>Total Sick Leave Used</label>
    <summarizedField>Earnings_and_Leave_Statements__c.Sick_Leave_Used__c</summarizedField>
    <summaryForeignKey>Earnings_and_Leave_Statements__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>