force-app/main/default/objects/Contact/fields/Veterans_Preference__c.field-meta.xml
<CustomField>
    <fullName>Veterans_Preference__c</fullName>
    <description>An employee&apos;s category of entitlement to preference at time of appointment in the Federal service based on active military service that terminated honorably; https://dw.opm.gov/datastandards/referenceData/1587/current?index=V</description>
    <inlineHelpText>An employee&apos;s category of entitlement to preference at time of appointment in the Federal service based on active military service that terminated honorably; https://dw.opm.gov/datastandards/referenceData/1587/current?index=V</inlineHelpText>
    <label>Veterans Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Veterans_Preference</valueSetName>
    </valueSet>
</CustomField>