force-app/main/default/objects/Contact/fields/Veterans_Preference_for_RIF__c.field-meta.xml
<CustomField>
    <fullName>Veterans_Preference_for_RIF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether employee has preference for reduction in force purpose; https://dw.opm.gov/datastandards/dataStandard/1588?index=V</description>
    <inlineHelpText>Indicates whether employee has preference for reduction in force purpose; https://dw.opm.gov/datastandards/dataStandard/1588?index=V</inlineHelpText>
    <label>Veterans Preference for RIF</label>
    <type>Checkbox</type>
</CustomField>