force-app/main/default/objects/Contact/fields/Veterans_Status__c.field-meta.xml
<CustomField>
    <fullName>Veterans_Status__c</fullName>
    <description>The indicator of whether an employee is a veteran as defined by 38 U.S.C. 101; https://dw.opm.gov/datastandards/dataStandard/1589?index=V</description>
    <inlineHelpText>The indicator of whether an employee is a veteran as defined by 38 U.S.C. 101; https://dw.opm.gov/datastandards/dataStandard/1589?index=V</inlineHelpText>
    <label>Veterans Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Not a Veteran</fullName>
            </value>
            <value>
                <fullName>Exempt from Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>