force-app/main/default/objects/Contact/fields/Workforce_Manager_Flag__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Manager_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAR and other Process flows will enable the ability for this Employee to submit cases &quot;on Behalf&quot; of a Supervisor for any employee.</description>
    <inlineHelpText>Is this user a Workforce Manager? This means that PAR and other Process flows will enable the ability for this Employee to submit cases &quot;on Behalf&quot; of a Supervisor for any employee.</inlineHelpText>
    <label>Workforce Liaison Flag</label>
    <type>Checkbox</type>
</CustomField>