force-app/main/default/objects/Contact/fields/Year_Degree_or_Certificate_Attained__c.field-meta.xml
<CustomField>
    <fullName>Year_Degree_or_Certificate_Attained__c</fullName>
    <description>The calendar year during which the employee received the degree or certificate shown for EDUCATION LEVEL; https://dw.opm.gov/datastandards/dataStandard/1593?index=Y</description>
    <inlineHelpText>The calendar year during which the employee received the degree or certificate shown for EDUCATION LEVEL; https://dw.opm.gov/datastandards/dataStandard/1593?index=Y</inlineHelpText>
    <label>Year Degree or Certificate Attained</label>
    <length>4</length>
    <type>Text</type>
</CustomField>